syntax = "proto3";
package proof;

import "pb/proof.proto"; // celestiaorg/nmt/pb/proof.proto

message DataRootProof {
  int64 squareSize = 1;
  proof.pb.Proof firstIncompleteRowProof = 2;
  proof.pb.Proof lastIncompleteRowProof = 3;
  MerkleProof merkleProof = 4;

}

message MerkleProof {
  int64 total = 1;
  int64 start = 2;
  int64 end = 3;
  repeated bytes subtreeRoots = 4;
}
